--- a/css/common.css
+++ b/css/common.css
@@ -3,8 +3,12 @@
 *{
 	margin: 0;
 	padding: 0;
+	font-family: "ＭＳ Ｐゴシック",sans-serif;
 }
 
+body{
+	background-color: #ddd;
+}
 
 /* ---------------------------------------------
         header
@@ -50,16 +54,34 @@ ul li{
         wrap
  --------------------------------------------- */
 #wrap{
-	margin: 0 5px 0 5px;
-	width: 310px;
+	width: 320px;
 	overflow: hidden;
 	clear: both;
 }
 
+.shop_seach{
+	padding: 10px 0 0 10px;
+	width: 310px;
+	height: 35px;
+	background-color: #a2ff00;
+}
+
+.seach1{
+	font-size: 15px;
+	width: 230px;
+	margin: 5px 0 0 0;
+	float: left;
+}
+
+.seach2{
+	width: 30px;
+	margin: 5px 0 0 0;
+	float: left;
+}
+
 
 #mapView{
-	margin: 5px 0 0 0;
-  	width: 310px;
+  	width: 320px;
   	height: 300px;
 }
 
@@ -70,7 +92,6 @@ ul li{
 
 
 footer{
-	margin: 5px 0 0 0;
 	padding: 10px 0 0 40px;
 	width: 280px;
 	height: 70px;
