--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
 *{
 	margin: 0;
 	padding: 0;
-	font-family: "ＭＳ Ｐゴシック",sans-serif;
+	font-family: "ＭＳゴシック",sans-serif;
 }
 
 body{
@@ -18,6 +18,7 @@ body{
 	height: 55px;
 	background-color: #ed6c44;
 	clear: both;
+	border-bottom: 1px solid #c55a39;
 }
 
 .logo{
@@ -27,11 +28,10 @@ body{
 	overflow: hidden;
 }
 
-.login{
+.toroku{
 	margin: 15px 0 0 20px;
 	width: 80px;
 	height: 20px;
-	background-color: red;
 	float: left;
 }
 
@@ -46,7 +46,6 @@ ul li{
 	width: 80px;
 	height: 40px;
 	float: left;
-	background-color: red;
 }
 
 
